objects/ASI_CTY_CN_WS_Custom_Category_Brand__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CTY_CN_WS_Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Sub-Brand</fullName>
                </value>
                <value>
                    <fullName>Bottle Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CTY_CN_WS_Custom_Category_Brand__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CTY CN WS Category Filter</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CTY_CN_WS_Custom_Category_Brand__c</referenceTo>
        <relationshipLabel>CN WS Category &amp; Brand</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PRC Premium Wholesaler</fullName>
                </value>
                <value>
                    <fullName>PRC Prestige Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CN WS Category &amp; Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CTY_CN_WS_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_WS_Sequence__c</columns>
        <columns>ASI_CTY_CN_WS_Level__c</columns>
        <columns>ASI_CTY_CN_WS_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bottle_Size</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CTY_CN_WS_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_WS_Level__c</columns>
        <columns>ASI_CTY_CN_WS_Bottle_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CTY_CN_WS_Custom_Category_Brand__c.ASI_CTY_CN_WS_Bottle_Size_Filter</value>
        </filters>
        <label>Bottle Size</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CTY_CN_WS_Type__c</columns>
        <columns>ASI_CTY_CN_WS_Parent__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_WS_Level__c</columns>
        <columns>ASI_CTY_CN_WS_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CTY_CN_WS_Custom_Category_Brand__c.ASI_CTY_CN_WS_Brand_Filter</value>
        </filters>
        <label>Brand</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>Category</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CTY_CN_WS_Type__c</columns>
        <columns>NAME</columns>
        <columns>ASI_CTY_CN_WS_Level__c</columns>
        <columns>ASI_CTY_CN_WS_Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CTY_CN_WS_Custom_Category_Brand__c.ASI_CTY_CN_WS_Category_Filter</value>
        </filters>
        <label>Category</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CN WS Category &amp; Brand</pluralLabel>
    <recordTypes>
        <fullName>ASI_CTY_CN_WS_Bottle_Size_Filter</fullName>
        <active>true</active>
        <label>ASI CTY CN WS Bottle Size Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CTY_CN_WS_Brand_Filter</fullName>
        <active>true</active>
        <label>ASI CTY CN WS Brand Filter</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CTY_CN_WS_Category_Filter</fullName>
        <active>true</active>
        <label>ASI CTY CN WS Category Filter</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>